--- a/app/src/main/res/layout-v21/activity_events.xml
+++ b/app/src/main/res/layout-v21/activity_events.xml
@@ -9,20 +9,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:background="@color/colorPrimary"
-        android:id="@+id/event_toolbar"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-    </android.support.v7.widget.Toolbar>
-    <FrameLayout
+    <!--TODO REMOVE TOOLBAR-->
+    <!--&lt;!&ndash;<android.support.v7.widget.Toolbar&ndash;&gt;-->
+        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:layout_height="?attr/actionBarSize"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:theme="@style/ThemeOverlay.AppCompat.ActionBar"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:background="@color/colorPrimary"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:id="@+id/event_toolbar"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:popupTheme="@style/ThemeOverlay.AppCompat.Light">&ndash;&gt;-->
+
+    <!--</android.support.v7.widget.Toolbar>-->
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/events_container">
-    </FrameLayout>
+        android:id="@+id/view_pager">
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
 
