--- a/app/src/main/res/layout-v21/fragment_event_maps.xml
+++ b/app/src/main/res/layout-v21/fragment_event_maps.xml
@@ -5,7 +5,8 @@
     <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/event_map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingBottom="30dp"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
