--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -9,7 +9,7 @@
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/view_pager"/>
+            android:id="@+id/event_pager"/>
 </FrameLayout>
 
     <!-- TODO: Update blank fragment layout -->
