--- a/app/src/main/res/layout/fragment_event_maps.xml
+++ b/app/src/main/res/layout/fragment_event_maps.xml
@@ -5,23 +5,8 @@
         <com.google.android.gms.maps.MapView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:id="@+id/event_map"/>
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+            android:id="@+id/event_map"
+            />
 
-        <fragment
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/place_autocomplete_from"
-            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>
-
-        <fragment
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/place_autocomplete_to"
-            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>
-    </android.support.v7.widget.Toolbar>
 </RelativeLayout>
 
