--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">4dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="map_margin">24dp</dimen>
+    <dimen name="map_bottom_padding">300dp</dimen>
 </resources>
