Committing several changes

--- a/app/src/main/res/layout/fragment_event_submission.xml
+++ b/app/src/main/res/layout/fragment_event_submission.xml
@@ -26,7 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/place_autocomplete_submit"
-            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>
+            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+            tools:layout="@layout/fragment_place_search" />
 
 
 
