--- a/app/src/main/res/layout-v21/activity_events.xml
+++ b/app/src/main/res/layout-v21/activity_events.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/event_card"
-    >
-<LinearLayout
+    android:background="@color/white">
+<android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/event_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="top"
+        android:elevation="4dp"
+        app:theme="@style/ToolBarTheme"
+        app:title="@string/app_name" />
+</android.support.design.widget.AppBarLayout>
 
-    <!--TODO REMOVE TOOLBAR-->
-
-    <android.support.v4.view.ViewPager
+    <FrameLayout
+        android:id="@+id/event_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/event_pager">
-    </android.support.v4.view.ViewPager>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</LinearLayout>
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/add_event"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:layout_margin="15dp"-->
+        <!--android:src="@drawable/ic_add_white_24dp" />-->
 
 
 
-
-</android.support.design.widget.CoordinatorLayout>
+    </android.support.design.widget.CoordinatorLayout>
