--- a/app/src/main/res/layout/add_event.xml
+++ b/app/src/main/res/layout/add_event.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--todo add ripple effect-->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -6,7 +8,6 @@
     android:paddingStart="@dimen/list_card_padding"
     android:paddingTop="@dimen/list_card_padding"
     android:paddingEnd="@dimen/list_card_padding"
-
     android:id="@+id/add_event"
     tools:showIn="@layout/fragment_event_list"
     android:background="@color/white">
