--- a/app/src/main/res/layout/add_home.xml
+++ b/app/src/main/res/layout/add_home.xml
@@ -1,35 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/add_home"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingEnd="@dimen/list_card_padding"
     android:paddingStart="@dimen/list_card_padding"
     android:paddingTop="@dimen/list_card_padding"
-    android:paddingEnd="@dimen/list_card_padding"    xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="@layout/fragment_event_list">
+
     <ImageView
+        android:id="@+id/home_image"
         android:layout_width="@dimen/icon_size"
         android:layout_height="@dimen/icon_size"
-        android:padding="4dp"
-        android:id="@+id/home_image"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_home_white_24dp"
         android:background="@drawable/stock_image_background"
-        />
+        android:padding="4dp"
+        android:src="@drawable/ic_home_white_24dp" />
+
+
     <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
         android:id="@+id/add_home_text"
-        android:text="Add Home"
-        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_marginStart="10dp"
         android:layout_toRightOf="@+id/home_image"
-        android:layout_centerInParent="true"
-        />
+        android:text="Add Home"
+        android:textSize="18sp" />
+
     <View
-        android:layout_below="@+id/home_image"
-        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/divider_grey"/>
+        android:layout_below="@+id/home_image"
+        android:layout_marginTop="8dp"
+        android:background="@color/divider_grey" />
 </RelativeLayout>
