--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -3,19 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="momocorp.partybus.Fragments.Eventsfragments.EventListFragment">
-    <include layout="@layout/add_event"
-        />
 
-    <include layout="@layout/add_home"
-        android:layout_below="@+id/add_event"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
-    <!-- TODO: Update blank fragment layout -->
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:id="@+id/event_list_recycler"
+        android:layout_height="match_parent"
+        android:id="@+id/swipe_refresh"
         android:layout_below="@+id/add_home"
-        android:layout_height="match_parent"/>
+        >
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:id="@+id/event_list_recycler"
+            android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 
 
