--- a/app/src/main/res/layout/fragment_place_search.xml
+++ b/app/src/main/res/layout/fragment_place_search.xml
@@ -1,13 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.CustomFragment.PlaceSearchFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment" />
+  <EditText
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="60dp"
+      android:layout_marginEnd="60dp"
+      android:hint="search here"/>
 
-</FrameLayout>
+
+</RelativeLayout>
