--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,23 @@
     <color name="white">#FFFFFF</color>
     <color name="divider_grey">#EEEEEE</color>
     <color name="blue_300">#64B5F6</color>
-
+    <color name="grey_500">#607D8B</color>
+    <color name="red_400">#EF5350</color>
+    <color name="blue_400">#42A5F5</color>
+    <color name="pink_400">#EC407A</color>
+    <color name="purple_400">#AB47BC</color>
+    <color name="indigo_400">#5C6BC0</color>
+    <color name="light_blue_400">#29B6F6</color>
+    <color name="cyan_400">#26C6DA</color>
+    <color name="teal_400">#26A69A</color>
+    <color name="green_400">#66BB6A</color>
+    <color name="light_green_400">#9CCC65</color>
+    <color name="lime_400">#D4E157</color>
+    <color name="yellow_400">#FFEE58</color>
+    <color name="amber_400">#FFCA28</color>
+    <color name="orange_400">#FFA726</color>
+    <color name="deep_orange_400">#FF7043</color>
+    <color name="light_blue_50">#E1F5FE</color>
+    <color name="light_blue_100">#B3E5FC</color>
 </resources>
+
