--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,11 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Widget.AppCompat.ImageButton.SocialMedia" parent="Base.Widget.AppCompat.ImageButton">
+        <item name="android:background">@null</item>
+        <item name="android:padding">6dp</item>
+    </style>
+
+    <style name="ToolBarTheme"></style>
 </resources>
