--- a/app/src/main/res/layout-v21/fragment_add.xml
+++ b/app/src/main/res/layout-v21/fragment_add.xml
@@ -1,172 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginEnd="10dp"
-    android:layout_marginStart="10dp"
-    android:orientation="vertical">
+    android:id="@+id/card_view_holder"
+    android:layout_width="300dp"
+    app:cardElevation="5dp"
+    android:layout_height="320dp"
+    android:layout_margin="20dp"
+    app:cardCornerRadius="2dp">
 
-    <Button
-        android:id="@+id/submit_event"
-        style="@style/CustomButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/search_fragment_holder"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="8dp"
-
-        android:text="NEXT" />
-
-    <RelativeLayout
-        android:id="@+id/add_holder"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+
+            app:srcCompat="@drawable/ic_directions_car_orange_700_24dp" />
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/title_holder"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="8dp"
+            android:textColorHint="@color/highlighted"
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.TextInputLayout">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/event_title"
+                style="@style/EditTextCustom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Title"
-                android:selectAllOnFocus="true" />
+                android:theme="@style/EditTextCustom.EditTextTheme" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/search_fragment_holder"
-
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/title_holder"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            app:cardElevation="4dp">
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp">
 
             <fragment
-                android:id="@+id/search_fragment"
+
+                android:id="@+id/search_place"
                 android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:layout="@layout/place_autocomplete_fragment" />
+                android:layout_height="wrap_content"
+                tools:layout="@layout/place_autocomplete_fragment"
 
+                />
         </android.support.v7.widget.CardView>
 
 
-        <RelativeLayout
-            android:id="@+id/relativeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/search_fragment_holder"
-            android:layout_margin="20dp">
+    </LinearLayout>
 
-            <ImageView
-                android:id="@+id/attach_money"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/price_edit"
-                android:layout_marginBottom="10dp"
-                app:srcCompat="@drawable/ic_attach_money_black_24dp" />
+</android.support.v7.widget.CardView>
 
-            <EditText
-                android:id="@+id/price_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="40dp"
-                android:ems="10"
-                android:inputType="numberDecimal"
-                android:selectAllOnFocus="true" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/date_holder"
-            android:layout_below="@+id/relativeLayout"
-            android:layout_centerHorizontal="true">
-
-            <LinearLayout
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Day"
-                    android:textAlignment="center"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:text="Month" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:text="Year" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/spinners"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/title"
-                android:orientation="horizontal">
-
-                <Spinner
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.72"
-                    android:gravity="end"
-                    android:id="@+id/day_picker"/>
-
-                <Spinner
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3.94"
-                    android:id="@+id/month_picker"
-                    android:gravity="end"/>
-
-                <Spinner
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2.17"
-                    android:id="@+id/year_picker"
-                    android:gravity="end"/>
-
-            </LinearLayout>
-
-        </RelativeLayout>
-        <!--todo 3/6/2017 change to autocomplete textview and connect to backend-->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/date_holder"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="50dp">
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/age_edit"/>
-
-
-        </android.support.design.widget.TextInputLayout>
-
-    </RelativeLayout>
-</android.support.design.widget.CoordinatorLayout>
