--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="8dp"
-    tools:context="momocorp.partybus.Fragments.Eventsfragments.AddFragment">
+    tools:context="momocorp.partybus.Fragments.AddFragment">
 
 <RelativeLayout
     android:layout_width="match_parent"
