--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03A9F4</color>
-    <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorPrimaryLight">#B3E5FC</color>
-    <color name="colorAccent">#536DFE</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryLight">#E1BEE7</color>
+    <color name="colorAccent">#FF5722</color>
     <color name="white">#FFFFFF</color>
     <color name="divider_grey">#EEEEEE</color>
     <color name="blue_300">#64B5F6</color>
@@ -25,5 +25,9 @@
     <color name="deep_orange_400">#FF7043</color>
     <color name="light_blue_50">#E1F5FE</color>
     <color name="light_blue_100">#B3E5FC</color>
+
+    <color name="activated">#26A69A</color>
+    <color name="highlighted">#4DB6AC</color>
+    <color name="colorNormal">#26C6DA</color>
 </resources>
 
