--- a/app/src/main/res/layout/money_dialog.xml
+++ b/app/src/main/res/layout/money_dialog.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view_holder"
     android:layout_width="match_parent"
     app:cardElevation="5dp"
-    android:layout_height="match_parent"
-    app:cardBackgroundColor="@color/green_400"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="2dp">
 
     <LinearLayout
@@ -15,40 +13,48 @@
         android:layout_gravity="center"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_gravity="center_horizontal"
-            app:srcCompat="@drawable/ic_attach_money_blue_500_24dp"
-            android:layout_marginTop="8dp"
-            android:id="@+id/imageView3"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            />
+            android:background="@color/green_400">
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:contentDescription="@string/price"
+                android:layout_marginTop="8dp"
+                app:srcCompat="@drawable/ic_attach_money_blue_500_24dp" />
+        </LinearLayout>
+
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center_horizontal"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:inputType="number"
-            android:layout_height="wrap_content"
             android:id="@+id/price"
-            android:textColor="#FFFFFF"
-            android:theme="@style/EditTextCustom.EditTextTheme.Money"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:inputType="numberDecimal"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:textColor="@android:color/black"
+            android:hint="0.00"
+            android:theme="@style/EditTextCustom.EditTextTheme.Money" />
 
         <Button
+            android:id="@+id/done_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:backgroundTint="@color/colorNormal"
+            android:elevation="5dp"
             android:text="done"
-            android:id="@+id/done_button"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/colorNormal"/>
-
-
+            android:textColor="@color/white" />
 
 
     </LinearLayout>
