Added floating action button to events activity. EventListAdapter replaced by firebase recycleradapter addeventactivity replaces addactivity EventInformation contains placeid for identifying places LoginActivity removed interestfragment

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorSecondary</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
@@ -17,7 +17,7 @@
     </style>
 
 
-    <style parent="Widget.AppCompat.EditText" name="EditTextCustom">
+    <style name="EditTextCustom" parent="Widget.AppCompat.EditText">
         <item name="android:layout_marginTop">5dp</item>
     </style>
 
@@ -36,6 +36,7 @@
     </style>
 
     <style name="ToolBarTheme"></style>
+
     <style name="CustomEditTtextTheme" parent="EditTextCustom">
         <item name="colorControlActivated">@color/activated</item>
         <item name="colorControlHighlight">@color/highlighted</item>
