--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -3,11 +3,16 @@
     android:shape="oval"
     >
     <size
-        android:height="16dp"
-        android:width="16dp"/>
+        android:height="32dp"
+        android:width="32dp"/>
 
     <solid
         android:color="@android:color/white"/>
 
+    <stroke
+        android:dashGap="2dp"
+        android:color="@color/colorSecondary"
+        android:width="1dp"
+        android:dashWidth="5dp"/>
 
 </shape>
