--- a/app/src/main/res/layout/add_home.xml
+++ b/app/src/main/res/layout/add_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/add_home"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,7 +18,7 @@
         android:layout_centerVertical="true"
         android:background="@drawable/stock_image_background"
         android:padding="4dp"
-        android:src="@drawable/ic_home_white_24dp" />
+        app:srcCompat="@drawable/ic_home_white_24dp" />
 
 
     <TextView
