--- a/app/src/main/res/layout/calendar_date_layout.xml
+++ b/app/src/main/res/layout/calendar_date_layout.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <DatePicker
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="320dp"
-    >
-
-
-    <DatePicker
         android:id="@+id/calendar_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:calendarViewShown="false"
@@ -26,27 +21,3 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintVertical_bias="0.38" />
-
-
-       <Button
-           android:layout_width="113dp"
-           android:id="@+id/submit_date"
-           android:layout_height="wrap_content"
-           android:background="@drawable/background_dialog"
-           app:layout_constraintTop_toBottomOf="@+id/calendar_date"
-           app:layout_constraintLeft_toRightOf="parent"
-           android:text="reset"
-           android:textColor="@android:color/white"
-           android:layout_marginStart="32dp"/>
-
-        <Button
-            android:layout_width="113dp"
-            android:id="@+id/reset_date"
-            android:layout_height="wrap_content"
-            android:background="@drawable/background_dialog"
-            android:textColor="@android:color/white"
-            android:text="submit"
-            app:layout_constraintTop_toBottomOf="@+id/calendar_date"
-            app:layout_constraintRight_toLeftOf="parent"
-            android:layout_marginEnd="40dp"/>
-</android.support.constraint.ConstraintLayout>
