--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -1,23 +1,27 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="momocorp.partybus.Fragments.Eventsfragments.EventListFragment">
+    tools:context="momocorp.partybus.Fragments.Eventsfragments.EventListFragment"
+   >
 
-    <android.support.v4.widget.SwipeRefreshLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/swipe_refresh"
-        android:layout_below="@+id/add_home"
-        >
+        android:layout_height="match_parent">
+
+
+
+
         <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
+            android:elevation="5dp"
             android:id="@+id/event_list_recycler"
-            android:layout_height="match_parent"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/event_card_layout"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
 
-
-
-
-
-</RelativeLayout>
+    </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
