--- a/app/src/main/res/layout/test_layout.xml
+++ b/app/src/main/res/layout/test_layout.xml
@@ -2,14 +2,69 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    app:cardCornerRadius="4dp"
     app:cardElevation="5dp"
-    android:layout_height="320dp"
-    android:layout_margin="20dp"
-    app:cardCornerRadius="2dp">
-   <include
-       layout="@layout/time_date_layout"/>
+    app:contentPadding="5dp"
 
+    app:cardBackgroundColor="@color/colorPrimaryDark">
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/event_title"-->
+            <!--style="@style/TextAppearance.AppCompat.Title"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="5dp"-->
+            <!--android:text="@string/title"-->
+
+            <!--android:textColor="@color/white" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/location"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/event_title"-->
+            <!--android:layout_marginBottom="5dp"-->
+            <!--android:layout_marginStart="5dp"-->
+            <!--android:text="@string/location"-->
+            <!--android:textColor="@color/white" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/price"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_alignTop="@+id/event_title"-->
+            <!--android:layout_marginEnd="5dp"-->
+            <!--android:text="@string/price"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:textSize="16sp" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/attending"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/attending"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:textSize="16sp"-->
+            <!--android:layout_marginLeft="2dp"-->
+            <!--android:layout_marginRight="2dp"-->
+            <!--android:layout_alignBottom="@+id/location"-->
+            <!--android:layout_toStartOf="@+id/price" />-->
+
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:srcCompat="@drawable/ic_people_white_18dp"-->
+            <!--android:layout_alignTop="@+id/attending"-->
+            <!--android:layout_alignEnd="@+id/price" />-->
+    <!--</RelativeLayout>-->
 
 
 </android.support.v7.widget.CardView>
