--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorPrimaryLight">#E1BEE7</color>
-    <color name="colorAccent">#FF5722</color>
+    <color name="colorPrimary">#7c1ea3</color>
+    <color name="colorPrimaryDark">#4a0073</color>
+    <color name="colorPrimaryLight">#ae52d4</color>
+    <color name="colorSecondary">#c1185b</color>
+    <color name="colorSecondaryDark">#8b0032</color>
+    <color name="colorSecondaryLight">#f95688
+    </color>
     <color name="white">#FFFFFF</color>
     <color name="divider_grey">#EEEEEE</color>
     <color name="blue_300">#64B5F6</color>
